@@ -8,6 +8,7 @@
 * Added new data type Entry Details
 * Added link of type "card" to the Card Account Report
 * Added optional attributes to the Transactions data type
+* Added attribute debitAccounting to the card account details type
 
 == Fixed sonar alerts
 
@@ -60,3 +61,7 @@ From now on, Transactions contain three new fields:
 - batchIndicator (Boolean),
 - batchNumberOfTransactions (Integer),
 - entryDetails (Array of Entry Details)
+
+== Added attribute debitAccounting to the card account details type
+
+From now on, card account details type contains a new field - debitAccounting(Boolean)
